--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -100,7 +100,7 @@
             <div style="height:40px">
                 <form id="create-workbook" method="POST" action="{% url 'workbook_create' %}" class="pull-left">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary" ><i class="fa fa-plus"></i>Create a New Workbook</button>
+                    <button type="submit" class="btn btn-link" ><i class="fa fa-plus"></i>Create a New Workbook</button>
                 </form>
                 {#            <a class="btn btn-link" href="{% url 'workbook_samples' %}">Sample Workbooks</a>#}
             </div>
@@ -235,7 +235,7 @@
                     {% endif %}
                 </div>
                 <div class="panel-footer">
-                    <a href="{% url 'project_upload' %}" class="btn btn-primary"><i class="fa fa-cloud-upload"></i>Upload Project Data</a>
+                    <a href="{% url 'project_upload' %}" class="btn btn-link"><i class="fa fa-cloud-upload"></i>Upload Project Data</a>
                 </div>
             </section>
         </div>
