--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -1,5 +1,8 @@
 #cohort-details
 
+    #one-cohort-type-per-create-warn
+        margin: 0px 15px 15px 15px
+
     .vertical-shim
         visibility: hidden
         height: 40px
