--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="{% if cohort.id %}col-md-12{% else %}col-lg-8{% endif %} data-tab-content-panel">
-                <div class="selected-filters isb-cgc-data-selected-filters panel panel-default">
+                <div class="selected-filters isb-cgc-data-selected-filters panel panel-default" {% if cohort.id %}style="display: none;"{% endif %}>
                     <div class="panel-heading clearfix">
                         <h4 class="panel-title pull-left">{% if cohort.id %}New Filters{% else %}Selected Filters{% endif %}</h4>
                         <a class="pull-right clear-filters" role="button" id="isb-cgc-data-clear-filters">Clear All</a>
