fixing methylation upload problem

--- a/static/templates/upload_file_list_item.html
+++ b/static/templates/upload_file_list_item.html
@@ -5,7 +5,7 @@
     <td class="low-level-hide">
         <select class="form-control">
             <option value="" disabled selected hidden>-- Select Data Type --</option>
-            <option value="methylation">DNA Methylation</option>
+            <option value="meth">DNA Methylation</option>
             <option value="mrna">Gene Expression</option>
             <option value="mirna">microRNA</option>
             <option value="protein">Protein Expression</option>
