Delete Study in project details only

--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -78,15 +78,7 @@
                         <tr class="study hidden" data-project-id="{{ project.id }}">
                             <td class="control-col">
                             </td>
-                            <td class="name-col">
-                                <div class="dropdown">
-                                    <a data-target="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-caret-down"></i></a>
-                                    {{ study.name }}
-                                    <ul class="dropdown-menu">
-                                        <li><a href="">New Workbook</a></li>
-                                    </ul>
-                                </div>
-                            </td>
+                            <td class="name-col">{{ study.name }}</td>
                             <td></td>
                             <td></td>
                             <td></td>
