--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row cgc-user-data-type-tabs">
         <div class="col-lg-4">
             <div class="panel panel-default">
                 <ul class="nav nav-tabs nav-tabs-data" role="tablist">
