Removed link for sharing project modal

--- a/templates/projects/project_modals.html
+++ b/templates/projects/project_modals.html
@@ -85,9 +85,7 @@
                     <div class="modal-body">
                         <p>
                             This will share the web view of the project.  This will not share the underlying Google cloud project
-                            and big query data needed if you wish to access this project outside of the website.  If you
-                            want to share your Google Cloud project with other users, please enter a support request at the <a href="">Google
-                            group</a>
+                            and big query data needed if you wish to access this project outside of the website.
                         </p>
                         <label for="share-users">Enter email addresses separated by a comma</label>
                         <textarea class="form-control" name="share_users"></textarea>
