--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -216,12 +216,12 @@
                         <div class="row col-md-6">
                             <span class="detail-label">Total Number of Samples:</span>
                             <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                            <span class="total-values" id="isb-cgc-data-total-samples">TBD</span>
+                            <span class="total-values" id="isb-cgc-data-total-samples">{{ metadata_counts.total }}</span>
                         </div>
                         <div class="row col-md-6">
                             <span class="detail-label">Total Number of Participants:</span>
                             <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                            <span class="total-values" id="isb-cgc-data-total-participants">TBD</span>
+                            <span class="total-values" id="isb-cgc-data-total-participants">{{ metadata_counts.participants }}</span>
                         </div>
                     </div>
                 </div>
