--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -96,7 +96,7 @@
         </div>
     </div>
 
-    <div class="row cgc-user-data-type-tabs" style="display: none">
+    <div class="row cgc-user-data-type-tabs">
         <div class="col-lg-4">
             <div class="panel panel-default">
                 <ul class="nav nav-tabs nav-tabs-data" role="tablist">
