--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -94,7 +94,7 @@
                 </div>
                 <div id="one-cohort-type-per-create-warn" class="alert alert-warning alert-dismissable" style="display: none;">
                     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    A cohort can only be made with ISB-CGC Data <b>or</b> User Data filters, not with both. Because the <span class="one-per-warn"></span> tab was active,
+                    A cohort can only be filtered with ISB-CGC Data <b>or</b> User Data filters, not with both. Because the <span class="one-per-warn"></span> tab was active,
                     we have chosen those filters. If you wish to create your cohort with the other filter set, cancel this dialog (using the X in the upper-right corner) and
                     switch to that tab before clicking the <b>Save as New Cohort</b> button.
                 </div>
