--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -240,7 +240,7 @@
 
                 <div class="parallel-sets panel panel-default">
                     <div class="panel-heading">
-                        <h4 class="panel-title">Public Data Availability</h4>
+                        <h4 class="panel-title">Data File Availability</h4>
                     </div>
                     <div class="panel-body">
                         <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
