Removing sample analyses from dashboard

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -18,7 +18,7 @@
 {% block content %}
 <div class="container">
 
-    {% if USER_DATA_ON %}
+    {% if False %}
     <section class="panel panel-default">
         <div class="panel-heading">
             <a role="button" data-target="#analysis-body" data-toggle="collapse" aria-expanded="true" aria-controls="analysis-body">
