-> Fixing #1702: CSS for other parts of the page was erroneously falling through to the modal, added in override for the modal's count spans

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -31,6 +31,8 @@
                 border-top-right-radius: 3px
             span
                 margin-left: 10px
+                &.share-count
+                    margin: 0
         >li.active>a
             color: darken($isb-warning, 20%) !important
         &-data, &-ud-filters
