--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -3,7 +3,8 @@
         <div class="tabpanel" role="tabpanel">
             <ul class="nav nav-tabs nav-tabs-ud-filters" role="tablist">
                 <li role="presentation" class="active"><a href="#ud-proj-study-filters" role="tab" data-toggle="tab" title="User Data Projects & Studies">Projects & Studies</a></li>
-                <li role="presentation" class=""><a href="#ud-feature-filters" role="tab" data-toggle="tab" title="User Data Features">Features</a></li>
+                {% if user_data.features %}<li role="presentation" class=""><a href="#ud-feature-filters" role="tab" data-toggle="tab" title="User Data Features">Features</a></li>
+                {% else %}<li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" title="">&nbsp;</a></li>{% endif %}
             </ul>
             <div class="tab-content">
                 <!-- user data projects & studies filters tab -->
@@ -47,43 +48,45 @@
                     </ul>
                 </div>
                 <!-- user data features filters tab -->
-                <div role="tabpanel" class="tab-pane" id="ud-feature-filters">
-                    <ul class="list-group" id="data-type-accordion" role="tablist" aria-multiselectable="true">
-                        <li class="list-group-item">
-                            <div id="user-data-filter-alert" class="alert alert-warning alert-dismissable">
-                                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                If a feature is not present across all active user-uploaded studies, it will not be available here for filtering.
-                            </div>
-                        </li>
-                        {% for attr in user_data.features %}
+                {% if user_data.features %}
+                    <div role="tabpanel" class="tab-pane" id="ud-feature-filters">
+                        <ul class="list-group" id="data-type-accordion" role="tablist" aria-multiselectable="true">
                             <li class="list-group-item">
-                                <div class="list-group-item__heading" role="tab" id="heading-{{ attr.id }}">
-                                    <a role="button" data-toggle="collapse" data-parent="#data-type-accordion" href="#collapse-{{ attr.id }}"
-                                       aria-expanded="false" aria-controls="collapse-{{ attr.id }}">
-                                        <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {% if attr.displ_name %}{{ attr.displ_name }}{% elif attr.name %}{{ attr.name }}{% else %}{{ attr.id }}{% endif %}
-                                    </a>
-                                </div>
-                                <div id="collapse-{{ attr.id }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel"
-                                     aria-labelledby="heading-{{ attr.id }}" data-feature-name="{{ attr.name }}" data-feature-id="{{ attr.id }}"
-                                     data-feature-displ-name="{% if attr.displ_name %}{{ attr.displ_name }}{% elif attr.name %}{{ attr.name }}{% else %}{{ attr.id }}{% endif %}"
-                                     data-feature-type="user-data">
-                                    <ul class="search-checkbox-list" id="{{ attr.id }}">
-                                        {% for v in attr.values %}
-                                            <li class="checkbox">
-                                                <label>
-                                                    <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}"
-                                                           data-value-id="{% if v.id %}{{ v.id }}{% elif v.name %}{{ v.name }}{% else %}{{ v.value }}{% endif %}"
-                                                           data-value-displ-name="{% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %}">
-                                                    {% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %} <span class="count">({{ v.count }})</span>
-                                                </label>
-                                            </li>
-                                        {% endfor %}
-                                    </ul>
+                                <div id="user-data-filter-alert" class="alert alert-warning alert-dismissable">
+                                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                    If a feature is not present across all active user-uploaded studies, it will not be available here for filtering.
                                 </div>
                             </li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                            {% for attr in user_data.features %}
+                                <li class="list-group-item">
+                                    <div class="list-group-item__heading" role="tab" id="heading-{{ attr.id }}">
+                                        <a role="button" data-toggle="collapse" data-parent="#data-type-accordion" href="#collapse-{{ attr.id }}"
+                                           aria-expanded="false" aria-controls="collapse-{{ attr.id }}">
+                                            <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {% if attr.displ_name %}{{ attr.displ_name }}{% elif attr.name %}{{ attr.name }}{% else %}{{ attr.id }}{% endif %}
+                                        </a>
+                                    </div>
+                                    <div id="collapse-{{ attr.id }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel"
+                                         aria-labelledby="heading-{{ attr.id }}" data-feature-name="{{ attr.name }}" data-feature-id="{{ attr.id }}"
+                                         data-feature-displ-name="{% if attr.displ_name %}{{ attr.displ_name }}{% elif attr.name %}{{ attr.name }}{% else %}{{ attr.id }}{% endif %}"
+                                         data-feature-type="user-data">
+                                        <ul class="search-checkbox-list" id="{{ attr.id }}">
+                                            {% for v in attr.values %}
+                                                <li class="checkbox">
+                                                    <label>
+                                                        <input type="checkbox" name="elements-selected" data-value-name="{{ v.name }}"
+                                                               data-value-id="{% if v.id %}{{ v.id }}{% elif v.name %}{{ v.name }}{% else %}{{ v.value }}{% endif %}"
+                                                               data-value-displ-name="{% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %}">
+                                                        {% if v.display_name %}{{ v.displ_name }}{% elif v.name %}{{ v.name }}{% else %}{{ v.id }}{% endif %} <span class="count">({{ v.count }})</span>
+                                                    </label>
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+            {% endif %}
             </div>
         </div>
     </div>
