--- a/blink_sass/pages/_projects.sass
+++ b/blink_sass/pages/_projects.sass
@@ -26,6 +26,8 @@
 
       .low-level-hide
         display: none
+  .fa-exclamation-circle
+    color: $danger-bgcolor-dark
 
 .column-definitions
   margin: 25px 15px
