--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -103,7 +103,7 @@
                             <a href="#">View example</a></p>
                     </div>
                     <div id="data-upload-forms">
-                        <button type="button" class="upload-file-button btn btn-primary">Select File(s)</button>
+                        <button type="button" class="upload-file-button btn btn-primary">Select File(s)</button> <span class="float-right space-top-10"> Click <a href="" target="_blank">here <i class="fa fa-share-square-o"></i></a> to view details of acceptable file types and formatting.</span>
                         <input type="file" class="hidden upload-file-field" multiple>
                         <table class="table table-striped" id="file-list-table">
                             <tr>
@@ -133,6 +133,8 @@
         <div class="panel-body" id="file-process-list">
 
             <label for="select-gcp-bucket">Please select a Google Cloud Bucket to upload your files to.</label>
+
+            {% if google_projects and google_projects.0.bucket_set.all|length > 0 %}
             <select id="select-gcp-bucket" name="gcp-bucket" class="form-control">
                 {% for google_project in google_projects %}
                 {% for bucket in google_project.bucket_set.all %}
@@ -140,7 +142,11 @@
                 {% endfor %}
                 {% endfor %}
             </select>
+            {% else %}
+                <div class="alert alert-warning alert-dismissable">You must have at least one Google Cloud Bucket registered with the system.</div>
+            {% endif %}
             <label for="select-gcp-dataset">Please select a BigQuery dataset to upload your data to.</label>
+            {% if google_projects and google_projects.0.bqdataset_set.all|length > 0 %}
             <select id="select-gcp-dataset" name="gcp-dataset" class="form-control">
                 {% for google_project in google_projects %}
                 {% for dataset in google_project.bqdataset_set.all %}
@@ -148,6 +154,9 @@
                 {% endfor %}
                 {% endfor %}
             </select>
+            {% else %}
+                <div class="alert alert-warning alert-dismissable">You must have at least one Google BigQuery Dataset registered with the system.</div>
+            {% endif %}
 
             <hr>
             <p>Please refer to the <a href="{% url 'system_data_dict' %}" target="_blank">system data dictionary <i class="fa fa-share-square-o"></i></a> for proper naming and data type conventions.</p>
