-> Mosaics for user data which display study and project

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -117,7 +117,7 @@
             max-height: 100px
             overflow-y: scroll
 
-    .clinical-trees
+    .clinical-trees, .user-data-trees
         .panel-body
             position: relative
             overflow: hidden
