--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -132,13 +132,13 @@
             </div>
         </div>
 
-        <div class="clinical-trees panel panel-default">
+        <div class="user-data-trees panel panel-default">
             <div class="panel-heading">
-                <h4 class="panel-title">Clinical Features</h4>
+                <h4 class="panel-title">Projects & Studies</h4>
             </div>
             <div class="panel-body">
                 <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                <div id="user-data-tree-graph-clinical" class="tree-graph-clinical"></div>
+                <div id="user-data-tree-graph" class="tree-graph-clinical"></div>
             </div>
             <div id="user-data-more-graphs" class="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
             <div id="user-data-less-graphs" class="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
