--- a/blink_sass/pages/_projects.sass
+++ b/blink_sass/pages/_projects.sass
@@ -34,6 +34,9 @@
   padding-top: 10px
   border-top: 1px solid #CCCCCC
 
+  .fa-exclamation-circle
+    color: $danger-bgcolor-dark
+
   .file-column-edit-table
 
     td
