--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -17,14 +17,14 @@
     <h1 class="page-header">{{ project.name }}</h1>
     <p class="project-description">{{ project.description }}</p>
     <ul class="page-action-group">
-        <li role="menuitem">
-            <form action="{% url 'worksheet_create_with_projects' %}" method="POST">
-                {% csrf_token %}
-                <input type="hidden" name="project_id" value="{{ project.id }}">
-                <button type="submit" class="btn btn-primary" >New Workbook</button>
-            </form>
-        </li>
-        <li class="separator"></li>
+{#        <li role="menuitem">#}
+{#            <form action="{% url 'worksheet_create_with_projects' %}" method="POST">#}
+{#                {% csrf_token %}#}
+{#                <input type="hidden" name="project_id" value="{{ project.id }}">#}
+{#                <button type="submit" class="btn btn-primary" >New Workbook</button>#}
+{#            </form>#}
+{#        </li>#}
+{#        <li class="separator"></li>#}
         {% if project.owner.id == user.id %}
         <li role="menuitem"><a href="{% url 'project_upload' %}" class="btn btn-info"><i class="fa fa-cloud-upload"></i>Upload Data</a></li>
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#edit-project-details-modal">Edit Details</button></li>
