--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -215,7 +215,7 @@
                         <a href="{% url 'projects' %}">Saved Projects ({{ projects.count }})</a></h3>
                 </div>
                 <div class="panel-body">
-                    <p>You can upload from your own research projects.</p>
+                    <p>You can upload data from your own research projects.</p>
                     {% if projects.count > 0 %}
                     <ul class="table-list">
                         {% for project in projects|slice:':6' %}
