--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -208,7 +208,7 @@
     {% if USER_DATA_ON %}
         <hr>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">
@@ -239,17 +239,18 @@
                 </div>
             </section>
         </div>
-        <div class="col-md-6">
-            <section class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        <a href="{% url 'public_projects' %}">Public Data ({% public_project_count %})</a></h3>
-                </div>
-                <div class="panel-body">
-                    <p>Browse publicly-available studies and data</p>
-                </div>
-            </section>
-        </div>
+{#      TODO: This div is hidden until we can figure out creating workbooks from projects/studies #}
+{#        <div class="col-md-6">#}
+{#            <section class="panel panel-default">#}
+{#                <div class="panel-heading">#}
+{#                    <h3 class="panel-title">#}
+{#                        <a href="{% url 'public_projects' %}">Public Data ({% public_project_count %})</a></h3>#}
+{#                </div>#}
+{#                <div class="panel-body">#}
+{#                    <p>Browse publicly-available studies and data</p>#}
+{#                </div>#}
+{#            </section>#}
+{#        </div>#}
     </div>
     {% endif %}
 
