--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -50,7 +50,9 @@
         <section class="project-study panel panel-primary" data-study-id="{{ study.id }}">
             <div class="panel-heading clearfix">
                 <div class="dropdown pull-left">
+                    {% if not project.is_public %}
                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-gear"></i></a>
+                    {% endif %}
                     <ul class="dropdown-menu">
 {#                        <li role="menuitem"><a href="">New Workbook</a></li>#}
                         {% if project.owner.id == user.id %}
