--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -100,10 +100,10 @@
                     </div>
                     <div class="low-level-message hidden">
                         <p>Please select and upload a file that provides reference to the patient, sample and data files.
-                            <a href="#">View example</a></p>
+                            <a href="http://isb-cancer-genomics-cloud.readthedocs.io/en/latest/sections/webapp/project_data_upload.html" target="_blank">View example</a></p>
                     </div>
                     <div id="data-upload-forms">
-                        <button type="button" class="upload-file-button btn btn-primary">Select File(s)</button> <span class="float-right space-top-10"> Click <a href="" target="_blank">here <i class="fa fa-share-square-o"></i></a> to view details of acceptable file types and formatting.</span>
+                        <button type="button" class="upload-file-button btn btn-primary">Select File(s)</button> <span class="float-right space-top-10"> Click <a href="http://isb-cancer-genomics-cloud.readthedocs.io/en/latest/sections/webapp/project_data_upload.html" target="_blank">here <i class="fa fa-share-square-o"></i></a> to view details of acceptable file types and formatting.</span>
                         <input type="file" class="hidden upload-file-field" multiple>
                         <table class="table table-striped" id="file-list-table">
                             <tr>
