--- a/templates/projects/project_upload.html
+++ b/templates/projects/project_upload.html
@@ -162,9 +162,11 @@
             <p>Please refer to the <a href="{% url 'system_data_dict' %}" target="_blank">system data dictionary <i class="fa fa-share-square-o"></i></a> for proper naming and data type conventions.</p>
         </div>
         <div class="panel-footer">
-            <button class="btn btn-primary" id="back-button"><i class="fa fa-chevron-left"></i> Back</button>
-            <button class="btn btn-primary" id="upload-button"><i class="fa fa-cloud-upload"></i> Upload Data</button>
+
+            <button class="btn btn-primary" id="back-button" {% if google_projects and google_projects.0.bucket_set.all|length == 0 and google_projects.0.bqdataset_set.all|length == 0%}disabled="disabled"{% endif %}><i class="fa fa-chevron-left"></i> Back</button>
+            <button class="btn btn-primary" id="upload-button" {% if google_projects and google_projects.0.bucket_set.all|length == 0 and google_projects.0.bqdataset_set.all|length == 0%}disabled="disabled"{% endif %}><i class="fa fa-cloud-upload"></i> Upload Data</button>
             <span class="hidden progress-message"><i class="fa fa-spin fa-circle-o-notch"></i> Uploading</span>
+
         </div>
     </section>
 </div>
