--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -130,7 +130,7 @@
                 <div class="page-action-group">
                     <li role="menuitem"><button class="btn btn-primary createWorkbookWithCohort">New Workbook</button></li>
                     <li class="separator"></li>
-                    <li role="menuitem"><button class="btn btn-info">Set Operations</button></li>
+                    <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#union-modal" aria-label="set-logic" role="button" aria-expanded="true">Set Operations</button></li>
                 </div>
                 {% endif %}
                 {% if cohorts %}
