-> Fixes to the database catchup script, specifically any failed subroutines will no longer cause the entire script to abort -> Violin Plot x-axis values will now be centered under the violin rather than left-justified -> Increased the left margin on the Violin Plot so long y-axis values won't collide with the axis label

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -24,6 +24,8 @@
         &.truncated-single
           white-space: nowrap
           text-align: end
+        &.centered
+          text-align: center
     .x-label-container
       div
         text-align: center
